# Implementacion-Local-Binary-Patterns

./: CMakeLists.txt  main.cpp
